--- a/keymaps/snowflake.json
+++ b/keymaps/snowflake.json
@@ -1,7 +1,5 @@
 {
   "atom-text-editor": {
-    "ctrl-f7": "snowflake-css-atom:generate-hextail",
-    "ctrl-f8": "snowflake-css-atom:log-markers",
-    "ctrl-f9": "snowflake-css-atom:zzTest"
+    "ctrl-f7": "snowflake-css-atom:generate-hextail"
   }
 }
